--- a/app/views/shared/_video_form.html.erb
+++ b/app/views/shared/_video_form.html.erb
@@ -2,15 +2,21 @@
 
 <tbar style="position:fixed;width:600px;height:42px;"><p>Video</p></tbar>
 
-<tbar style="position:fixed;margin-left:50px;top:200px;width:120px;height:42px;"><p>Video Link</p></tbar>
-<span style="position:fixed;margin-left:168px;top:201px;"><%= f.text_field :link, style: "width:370px;height:30px;" %></span>
+<div class="btn-group" data-toggle="buttons-radio" style="position:fixed;top:140px;margin-left:50px;">
+  <button type="button" class="btn" style="height:60px;width:166px;">Nolyj<%= f.radio_button :kyahai, '2', :checked => true %></button>
+  <button type="button" class="btn" style="height:60px;width:166px;">Question<%= f.radio_button :kyahai, '3' %></button>
+  <button type="button" class="btn" style="height:60px;width:167px;">Advice<%= f.radio_button :kyahai, '4' %></button>
+</div>
 
-<tbar style="position:fixed;margin-left:50px;top:260px;width:120px;height:102px;"><p>Description</p></tbar>
-<span style="position:fixed;margin-left:168px;top:261px;"><%= f.text_field :content, style: "width:370px;height:91px;" %></span>
+<tbar style="position:fixed;margin-left:50px;top:230px;width:120px;height:42px;"><p>Video Link</p></tbar>
+<span style="position:fixed;margin-left:168px;top:231px;"><%= f.text_field :link, style: "width:370px;height:30px;" %></span>
 
-<tbar style="position:fixed;margin-left:50px;top:380px;width:120px;height:42px;"><p>Tags</p></tbar>
-<span style="position:fixed;margin-left:168px;top:381px;"><%= f.text_field :tag_list, style: "width:370px;height:30px;" %></span>
+<tbar style="position:fixed;margin-left:50px;top:290px;width:120px;height:102px;"><p>Description</p></tbar>
+<span style="position:fixed;margin-left:168px;top:291px;"><%= f.text_field :content, style: "width:370px;height:91px;" %></span>
 
-<span style="position:fixed;margin-left:50px;top:460px;"><%= f.submit "Post", class: "bar", style: "width:500px;height:42px;" %></span>
+<tbar style="position:fixed;margin-left:50px;top:410px;width:120px;height:42px;"><p>Tags</p></tbar>
+<span style="position:fixed;margin-left:168px;top:411px;"><%= f.text_field :tag_list, style: "width:370px;height:30px;" %></span>
+
+<span style="position:fixed;margin-left:50px;top:490px;"><%= f.submit "Post", class: "bar", style: "width:500px;height:42px;" %></span>
 
 <% end %>
