--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -23,14 +23,14 @@
   <% end %>
   </span>	
 
-  <span style="position:absolute;">
-  <% if signed_in? %>
-  <%=  link_to vote_up_micropost_path(feed_item.id) do %> 
-  <barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3><%= feed_item.votes_for %></h3></barr>	
-  <% end %>
-  <% else %>
-  <barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3><%= feed_item.votes_for %></h3></barr>
-  <% end %>
+  <span id="vote_form"style="position:absolute;">
+	  <% if current_user.voted_for?(feed_item) %>
+	 	<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>✓</h3></barr>
+	  <% else %>
+		<%=  link_to(vote_up_micropost_path(feed_item.id), :remote => true) do |f| %> 
+		<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>	
+		<% end %>
+	  <% end %>
   </span>
 
 
@@ -39,7 +39,7 @@
 
 
 
-<div class="modal hide" id="<%= feed_item.id %>4" style="position:fixed;margin-left:-470px;height:90%;top:270px;width:940px;background-color:#953361;">
+<div class="modal hide" id="<%= feed_item.id %>4" style="position:fixed;margin-left:-475px;height:90%;top:270px;width:940px;background-color:black;border: 9px solid white;">
 	
 
   <div><%= image_tag feed_item.image_url(:lmicropost) if feed_item.image? %></div>
