--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -57,8 +57,8 @@
 	<div style="position:absolute;top:0px;right:0px;height:auto;width:260px;background-color:black;">
 	<div style="position:absolute;top:0px;right:0px;">
 		<span style="color:white;position:absolute;right:256px;top:5px;"><%= image_tag micropost.user.avatar_url(:avatar) if micropost.user.avatar? %></span>
-		<h1 style="color:white;position:absolute;right:60px;top:5px;"><%= micropost.user.name %></h1>
-		<h6 style="font-size:10px;color:#CC337A;float:right;"><%= time_ago_in_words(micropost.created_at) %> ago </h6>
+		<h1 style="color:white;position:absolute;right:4px;top:5px;"><%= micropost.user.name %></h1>
+		<h6 style="font-size:10px;color:#CC337A;float:right;right:1px;"><%= time_ago_in_words(micropost.created_at) %> ago </h6>
 		<tbar style="position:absolute;font-size:15px;color:white;float:right;right:4px;top:40px;">Plus:<%= micropost.votes_for %></tbar>
 	</div>
 	
