--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 
 
 	
-<div id="container" style="margin-right:240px;margin-left:1%;display:block;">
+<div id="container" style="margin-right:240px;left:1%;display:block;">
    <%= render Micropost.all  %>
 </div>
 
