--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,6 +33,7 @@
 
     <% end %>
 
+    <span style="position:absolute;margin-left:50px;top:720px;"><%= link_to 'Destroy', current_user, method: :delete, data: { confirm: 'Are you sure?' }  %></span>
   </div>
 </div>
 </div>
