--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -246,6 +246,17 @@ overflow-y: scroll;
   box-shadow: 0px 2px 2px 0px #E21E79;
 }
 
+.dir {
+
+  width: 179px;
+  height: 199px;
+  margin: 10px;
+  margin-bottom:20px;
+  float:left;
+  border: 1px solid #1D1D1D;
+  box-shadow: 0px 2px 2px 0px #E21E79;
+}
+
 .question {
 
   background:black;
