--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -24,12 +24,18 @@
   </span>	
 
   <span id="vote_form"style="position:absolute;">
+	  <% if signed_in? %>
+	
 	  <% if current_user.voted_for?(micropost) %>
 	 	<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>✓</h3></barr>
 	  <% else %>
 		<%=  link_to(vote_up_micropost_path(micropost.id), :remote => true) do |f| %> 
 		<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>	
 		<% end %>
+	  <% end %>
+	
+	  <% else %>
+	  <barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>
 	  <% end %>
   </span>
 
@@ -58,7 +64,7 @@
 	<div style="position:absolute;top:0px;right:0px;">
 		<span style="color:white;position:absolute;right:256px;top:5px;"><%= image_tag micropost.user.avatar_url(:avatar) if micropost.user.avatar? %></span>
 		<h1 style="color:white;position:absolute;right:4px;top:5px;"><%= micropost.user.name %></h1>
-		<h6 style="font-size:10px;color:#CC337A;float:right;right:1px;"><%= time_ago_in_words(micropost.created_at) %> ago </h6>
+		<h6 style="font-size:8px;color:#CC337A;float:right;right:1px;"><%= time_ago_in_words(micropost.created_at) %> ago </h6>
 		<tbar style="position:absolute;font-size:15px;color:white;float:right;right:4px;top:40px;">Plus:<%= micropost.votes_for %></tbar>
 	</div>
 	
