--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,20 +1,20 @@
-<% @user ||= current_user %>
+
 
 	
-  <div href="<%= following_user_path(@user) %>" style="text-align:center;position:fixed;margin-left:1px;color:#CC337A;">
+  <a href="<%= following_user_path(current_user) %>" style="text-align:center;position:fixed;margin-left:1px;color:#CC337A;">
     <h1 id="following">
-      <%= @user.followed_users.count %>
+      <%= current_user.followed_users.count %>
     </h1>
     <h5>following</h5>
-  </div>
+  </a>
 
   <div style="text-align:center;position:fixed;margin-top:3px;margin-left:52px;">
-	<%= image_tag @user.avatar_url(:avatar) if @user.avatar? %>
+	<%= image_tag current_user.avatar_url(:avatar) if current_user.avatar? %>
   </div>
 
-  <div href="<%= followers_user_path(@user) %>" style="text-align:center;position:fixed;margin-left:109px;">
+  <a href="<%= followers_user_path(current_user) %>" style="text-align:center;position:fixed;margin-left:109px;">
     <h1 id="followers">
-      <%= @user.followers.count %>
+      <%= current_user.followers.count %>
     </h1>
     <h5>followers</h5>
-  </div>
+  </a>
