--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,30 +1,50 @@
 <% provide(:title, @title) %>
-<div class="row">
-  <aside class="span4">
-    <section>
 
-      <h1><%= @user.name %></h1>
-      <span><%= link_to "view my profile", @user %></span>
-      <span><b>Microposts:</b> <%= @user.microposts.count %></span>
-    </section>
-    <section>
-      <%= render 'shared/stats' %>
-      <% if @users.any? %>
-        <div class="user_avatars">
-          <% @users.each do |user| %>
-        <%= user.name %>
-          <% end %>
-        </div>
-      <% end %>
-    </section>
-  </aside>
-  <div class="span8">
-    <h3><%= @title %></h3>
-    <% if @users.any? %>
-      <ul class="users">
 
-      </ul>
+<%= render 'shared/header' %>
 
-    <% end %>
+<h1><%= @title %></h1>
+
+<div style="margin-right:240px;">
+<% if @users.any? %>
+<% @users.each do |user| %>
+  <div class="dir" style="z-index:50;">
+  <%= link_to user do %>
+
+        <span style="text-align:center;position:absolute;opacity:0.5;"><%= image_tag user.avatar_url(:lavatar) if user.avatar? %></span>
+
+		<span style="text-align:center;position:absolute;margin-top:10px;margin-left:8px;">
+	    <h1 style="color:white;"><%= user.name %></h1>
+	  	</span>
+
+		<span href="<%= following_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:5px;margin-top:140px;">
+	    <h1 id="following" class="stat" style="color:white;"><%= user.followed_users.count %></h1><h5 style="color:white;">following</h5>
+	  	</span>
+
+	    <span style="text-align:center;position:absolute;margin-top:140px;margin-left:68px;">
+	    <h1 style="color:white;"><%= user.microposts.count %></h1><h5 style="color:white;">posts</h5>
+	  	</span>
+
+	    <span href="<%= followers_user_path(@user) %>" style="text-align:center;position:absolute;margin-top:140px;margin-left:120px;">
+	    <h1 id="followers" class="stat" style="color:white;"><%= user.followers.count %></h1><h5 style="color:white;">followers</h5>
+	  	</span>	
+
+  <% end %>
   </div>
+<% end %>
+<% end %>
 </div>
+
+
+<br />
+
+
+<script type="text/javascript">
+$(function(){
+  $('#container').masonry({
+
+    itemSelector : '.dir',
+    columnWidth : 180;
+  });
+});
+</script>
