--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,8 +24,10 @@
 </div>
 
 <aside style="position:absolute;">
-  <%= render @microposts.where(kyahai: "3")  %>
-</div>
+  <%= render @microposts.where(kyahai: "3") %>
+</aside>
+
+
 
 <% end %>
 
