--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,8 @@
 <%= render 'shared/header' %>
-
+<div><%= render 'shared/trendusers' %></div>
 
 	
-<div id="container" style="margin-right:240px;left:1%;display:block;">
+<div id="container" style="margin-top:470px;margin-right:240px;left:1%;display:block;">
    <%= render Micropost.all  %>
 </div>
 
@@ -15,39 +15,18 @@
 
    <% Micropost.where(kyahai: "3").each do |micropost| %>
 	
-	<div class="question" >
-
+	<div style=""class="question" >
 	<div data-toggle="modal" href="#<%= micropost.id %>4" style="cursor:pointer;cursor:hand;" >
+		<span style="color:white;right:256px;top:5px;float:left;margin:2px;"><%= image_tag micropost.user.avatar_url(:avatar) if 			micropost.user.avatar? %></span>
+		<span><h5 style="font-size:15px;"><%= micropost.user.name %>:</h5> </span>
+		<div style="color:black;font-size:13px;"><%= micropost.content %></div>
+		<span style="font-weight:bold;font-size:10px;font-weight:normal;float:right;"><%= time_ago_in_words(micropost.created_at) %> ago </span>
+
 	  <span ><%= image_tag micropost.image_url(:micropost) if micropost.image? %></span>
 	  <div class="link"><a href= <%= micropost.link %> ></a></div>
-	  <% if micropost.content? %>
-	  <div class="content"><%= micropost.content %></div>
-	  <% end %>
+	</div>
 	</div>
 
-	<barr style="position:absolute;width:50px;height:28px;text-align:center;"><h3>
-		<% if current_user?(micropost.user) %>
-		  <%= link_to "+", micropost, method: :delete, data: { confirm: "You sure?" },title: micropost.content %>
-		<% end %>
-    </h3></barr>
-
-	<span style="position:absolute;">
-	<%= link_to micropost.user do %>
-	<barr style="position:absolute;margin-left:50px;width:108px;height:28px;text-align:center;"><h3><%= micropost.user.name %></h3></barr>
-	<% end %>
-	</span>	
-
-	<span style="position:absolute;">
-	<% if signed_in? %>
-	<%=  link_to vote_up_micropost_path(micropost.id) do %> 
-	<barr style="position:absolute;margin-left:158px;width:52px;height:28px;text-align:center;"><h3><%= micropost.votes_for %></h3></barr>	
-	<% end %>
-	<% else %>
-	<barr style="position:absolute;margin-left:158px;width:52px;height:28px;text-align:center;"><h3><%= micropost.votes_for %></h3></barr>
-	<% end %>
-	</span>
-
-	</div>
 		
    <% end %>
 </aside>
