--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -123,6 +123,7 @@ ar {
 	);
 	border: 1px solid #620631;
 	font-size:18px;color:white;text-align:center;font-family: "bankg";
+
 }
 
 .bar:hover {
@@ -261,10 +262,8 @@ overflow-y: scroll;
   opacity:0.5;
 font-weight:bold;
   background:white;
-  width: 210px;
-  margin: 10px;
-  margin-left:14px;
-  margin-bottom:0px;
+  width: 240px;
+  margin-bottom:10px;
   float:left;
   font-size:12px;
 }
@@ -273,10 +272,9 @@ font-weight:bold;
   opacity:1;
 font-weight:bold;
   background:white;
-  width: 210px;
-  margin: 10px;
-  margin-left:14px;
-  margin-bottom:0px;
+  width: 240px;
+
+  margin-bottom:10px;
   float:left;
   font-size:12px;
 }
@@ -299,6 +297,16 @@ font-weight:bold;
   margin: 5px;
   float:left;
   box-shadow: 0px 2px 2px 0px black;
+  opacity:0.8;
+}
+
+.tag:hover {
+  color:#CC337A;
+  padding:5px;
+  margin: 5px;
+  float:left;
+  box-shadow: 0px 2px 2px 0px black;
+  opacity:1;
 }
 
 .content {
