--- a/app/views/shared/_feedq.html.erb
+++ b/app/views/shared/_feedq.html.erb
@@ -1,3 +1,21 @@
 <% if @feed_items.any? %>
-    <%= render partial: 'shared/feed_item',  collection: @feed_items.where(kyahai: "3") %>
+    <aside style="position:absolute;margin-top:-60px;">
+
+	   <% @feed_items.where(kyahai: "3").each do |feed_item| %>
+
+		<div style=""class="question" >
+		<div data-toggle="modal" href="#<%= feed_item.id %>4" style="cursor:pointer;cursor:hand;" >
+			<span style="color:white;top:5px;float:left;margin:2px;"><%= image_tag feed_item.user.avatar_url(:avatar) if 			feed_item.user.avatar? %></span>
+			<span><h5 style="font-size:15px;"><%= feed_item.user.name %>:</h5> </span>
+			<div style="color:black;font-size:13px;"><%= feed_item.content %></div>
+			<span style="font-weight:bold;font-size:10px;font-weight:normal;float:right;"><%= time_ago_in_words(feed_item.created_at) %> ago </span>
+
+		  <span ><%= image_tag feed_item.image_url(:micropost) if feed_item.image? %></span>
+		  <div class="link"><a href= <%= feed_item.link %> ></a></div>
+		</div>
+		</div>
+
+
+	   <% end %>
+	</aside>
 <% end %>
