--- a/app/views/static_pages/feed.html.erb
+++ b/app/views/static_pages/feed.html.erb
@@ -19,12 +19,13 @@
 
 
 <script type="text/javascript">
-$(function(){
-  $('#container').masonry({
-
+$(window).load(function(){
+var $container = $('#container');
+$container.imagesLoaded(function(){
+  $container.masonry({
     itemSelector : '.item',
     columnWidth : 240
   });
 });
-
+});
 </script>
