--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,11 +56,13 @@
 
 
 <script type="text/javascript">
-$(function(){
-  $('#container').masonry({
-
+$(window).load(function(){
+var $container = $('#container');
+$container.imagesLoaded(function(){
+  $container.masonry({
     itemSelector : '.item',
-    columnWidth : 240;
+    columnWidth : 240
   });
+});
 });
 </script>
