--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -48,7 +48,7 @@
 <div class="modal hide" id="<%= micropost.id %>4" style="position:fixed;margin-left:-475px;height:90%;top:270px;width:940px;background-color:black;border: 9px solid white;">
 	
 
-  <div><%= image_tag micropost.image_url(:lmicropost) if micropost.image? %></div>
+  <div style="width:680px;"><%= image_tag micropost.image_url(:lmicropost) if micropost.image? %></div>
   
   <div class="linkl" style="width:680px;"><a href= <%= micropost.link %> ></a></div>
   <div class="content" style="width:660px;"><%= micropost.content if micropost.content? %></div>
