--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -42,7 +42,7 @@
 <div class="modal hide" id="<%= feed_item.id %>4" style="position:fixed;margin-left:-475px;height:90%;top:270px;width:940px;background-color:black;border: 9px solid white;">
 	
 
-  <div><%= image_tag feed_item.image_url(:lmicropost) if feed_item.image? %></div>
+  <div style="width:680px;"><%= image_tag feed_item.image_url(:lmicropost) if feed_item.image? %></div>
   
   <div class="linkl" style="width:680px;"><a href= <%= feed_item.link %> ></a></div>
   <div class="content" style="width:660px;"><%= feed_item.content if feed_item.content? %></div>
