--- a/app/views/shared/_feedq.html.erb
+++ b/app/views/shared/_feedq.html.erb
@@ -10,7 +10,7 @@
 			<div style="color:black;font-size:13px;"><%= feed_item.content %></div>
 			<span style="font-weight:bold;font-size:10px;font-weight:normal;float:right;"><%= time_ago_in_words(feed_item.created_at) %> ago </span>
 
-		  <span ><%= image_tag feed_item.image_url(:micropost) if feed_item.image? %></span>
+		  <div style="float:right;padding-right:15px;padding-bottom:15px;"><%= image_tag feed_item.image_url(:micropost) if feed_item.image? %></div>
 		  <div class="link"><a href= <%= feed_item.link %> ></a></div>
 		</div>
 		</div>
